--- a/main.css
+++ b/main.css
@@ -20,14 +20,14 @@ div {
   border-top-color:#ff0 ;
 }
 #green{
-  border-top-color:#008000 ;
+  border-top-color:#00bc3f;
 }
 #blue {
-  border-top-color: #00f;
+  border-top-color: #06f;
 }
 #indigo {
-  border-top-color: #4b0082;
+  border-top-color: #8a2be2;
 }
 #violet {
-  border-top-color: #ee82ee;
+  border-top-color: #d300c9;
 }
